--- a/models/staging/stripe/src_stripe.yml
+++ b/models/staging/stripe/src_stripe.yml
@@ -9,3 +9,6 @@ sources:
         columns:
           - name: id
             description: primary key for payments
+            tests:
+              - unique
+              - not_null
