--- a/models/staging/stripe/src_stripe.yml
+++ b/models/staging/stripe/src_stripe.yml
@@ -2,6 +2,8 @@ version: 2
 
 sources:
   - name: stripe
+    database: raw
+    schema: stripe
     description: copy of stripe database
     tables:
       - name: payment
