add test on order_id

--- a/models/staging/jaffle_shop/stg_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/stg_jaffle_shop.yml
@@ -11,6 +11,11 @@ models:
 
   - name: stg_orders
     columns: 
+      - name: order_id
+        tests:
+          - unique
+          - not_null
+          
       - name: status
         tests:
           - accepted_values:
