--- a/models/staging/stripe/src_stripe.yml
+++ b/models/staging/stripe/src_stripe.yml
@@ -8,6 +8,13 @@ sources:
     tables:
       - name: payment
         description: raw payment data
+        
+        loaded_at_field: _batched_at
+        
+        freshness:
+          warn_after: {count: 12, period: hour}
+          error_after: {count: 24, period: hour}
+
         columns:
           - name: id
             description: primary key for payments
